--- a/application/kgh.fxml
+++ b/application/kgh.fxml
@@ -29,8 +29,18 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
+            <TextField fx:id="TextFieldSelectedDirectory" onAction="#choosePath" promptText="Kein Pfad gewählt" text="Kein Pfad ausgewählt">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextField>
+            <Button fx:id="btnOpenDirectoryChooser" mnemonicParsing="false" onAction="#choosePath" prefHeight="25.0" prefWidth="174.0" text="Zielpfad wählen">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Button>
          </children>
       </VBox>
-      <ListView fx:id="fileListUI" layoutX="174.0" prefHeight="448.0" prefWidth="498.0" />
+      <ListView fx:id="fileListUI" layoutX="179.0" layoutY="-9.0" prefHeight="466.0" prefWidth="531.0" />
    </children>
 </Pane>
